--- a/_data/books.yaml
+++ b/_data/books.yaml
@@ -13,7 +13,7 @@
   startDate: 2022-07-10
   isCurrent: true
 
-- title: \"Staff Engineer: Leadership beyond the management track\"
+- title: "Staff Engineer: Leadership beyond the management track"
   author: Will Larson
   summary: \"Overall I think this book mostly reinforced things I already knew. It's interesting to see different opinions and paths to being promoted, though. It makes me think that really most engineers can get to the level if they are in the right place at the right time and are good at marketing themselves through either impactful work or mentorship.\"
   link: https://www.amazon.com/Staff-Engineer-Leadership-beyond-management/dp/1736417916
