--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ description: "Programmer Matt's blog" # This will show up in places like twitter
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "pinnypgm"
+email: "wilfert2@illinois.edu"
 github_username: "ProgrammerMatt"
 linkedin_username: "mattwilfert"
 #facebook_username: username
